# ChangeLog for media-gfx/povray
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.100 2010/05/15 16:22:12 ssuominen Exp $

  15 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  povray-3.6.1-r4.ebuild, +files/povray-3.6.1-libpng14.patch:
  Backport libpng14 patch to stable 3.6.1 release.

  12 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  povray-3.7.0_beta32.ebuild, +files/povray-3.7.0_beta32-libpng14.patch:
  Fix building with libpng14.

*povray-3.7.0_beta32 (14 Jun 2009)

  14 Jun 2009; Joe Peterson <lavajoe@gentoo.org>
  +povray-3.7.0_beta32.ebuild,
  +files/povray-3.7.0_beta32-print-extend-expiration-info.patch:
  Add new 3.7.0 beta 32

*povray-3.7.0_beta29-r2 (16 Jan 2009)

  16 Jan 2009; Joe Peterson <lavajoe@gentoo.org>
  +files/povray-3.7.0_beta29-fix-expiration-bug.patch,
  -povray-3.7.0_beta29-r1.ebuild, +povray-3.7.0_beta29-r2.ebuild:
  Fix expiration date issue (bug #255176)

  27 Nov 2008; Joe Peterson <lavajoe@gentoo.org>
  -files/povray-3.7.0-print-extend-expiration-info.patch,
  +files/povray-3.7.0_beta29-print-extend-expiration-info.patch,
  povray-3.7.0_beta29-r1.ebuild:
  Fix up versioning code in beta (no rev bump)

  15 Nov 2008; Joe Peterson <lavajoe@gentoo.org> -povray-3.6.1-r3.ebuild:
  Remove old

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  povray-3.6.1-r4.ebuild:
  ppc stable, bug #245981

  15 Nov 2008; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r4.ebuild:
  alpha/ia64 stable wrt #245981

  15 Nov 2008; Joe Peterson <lavajoe@gentoo.org> -povray-3.6.1-r2.ebuild:
  Remove old

  15 Nov 2008; Markus Meier <maekke@gentoo.org> povray-3.6.1-r4.ebuild:
  amd64/x86 stable, bug #245981

  14 Nov 2008; Joe Peterson <lavajoe@gentoo.org>
  povray-3.7.0_beta29-r1.ebuild:
  Fix FEATURES="test" functionality in beta releases (bug #246645)

  12 Nov 2008; Markus Rothe <corsair@gentoo.org> povray-3.6.1-r4.ebuild:
  Stable on ppc64; bug #153538
