@@ -2,11 +2,11 @@ AUX povray-3.6.1-configure.patch 1081 RMD160 92dd3995691d567f6ae24b38bea1f31b980
 AUX povray-3.6.1-find-egrep.patch 2463 RMD160 6af6c01daec1a0eb5ae27f65ede5411c4af2dbe2 SHA1 19537ff628130a4d2b048529e5a4f9bbfe79840c SHA256 1f56d1223954c1d0ed160b034badcf0878813b0bf984221c8eadce5d7666a46e
 AUX povray-3.6.1-libpng14.patch 776 RMD160 df044db215116ab40a3d957068eaf5a9aecce420 SHA1 619bed7be90e347fa3113299795a2b4efd4ee869 SHA256 30d508b14a68b3eff1b2dbaf180c5b9494629fb0720ae6e1ccb17b04efab93fb
 AUX povray-3.6.1-use-system-libpng.patch 1922 RMD160 dd5481f9ff81f06c596dc0a19386e5ca01f4ad57 SHA1 98333f7701ffd1803adc9b04d5d09beff2f34c27 SHA256 efb0d8345d8409d6c92d024b0b1621bea88f460d73ad9d00b4b670e1ae6b127f
-AUX povray-3.7.0_beta32-libpng14.patch 688 RMD160 585ab7e81a865fa7eab202018677cbde507dd385 SHA1 5a8aed165da70db515a825bd818fda4ba28aeff1 SHA256 e4665235b97475ab3087c1adce002da32cba2585bf5ccb51cc2d65e1f8fa7be1
-AUX povray-3.7.0_beta32-print-extend-expiration-info.patch 1160 RMD160 a1c662813a18681ccd8143f3fe5a7dde4a7a2582 SHA1 eb459a8c01e48ab3cf88f05827286a82cd3b5feb SHA256 ec323fcbd116b01f08cd7d65d5aea496b9c551b2463b89d1cdface2dd694580d
+AUX povray-3.7.0_beta35-libpng14.patch 688 RMD160 585ab7e81a865fa7eab202018677cbde507dd385 SHA1 5a8aed165da70db515a825bd818fda4ba28aeff1 SHA256 e4665235b97475ab3087c1adce002da32cba2585bf5ccb51cc2d65e1f8fa7be1
+AUX povray-3.7.0_beta35-print-extend-expiration-info.patch 1160 RMD160 a1c662813a18681ccd8143f3fe5a7dde4a7a2582 SHA1 eb459a8c01e48ab3cf88f05827286a82cd3b5feb SHA256 ec323fcbd116b01f08cd7d65d5aea496b9c551b2463b89d1cdface2dd694580d
 DIST povray-3.6.1.tar.bz2 8200160 RMD160 84ba679da66089f192cc1bfcf8bdd498e736a9a3 SHA1 1fab3ccbdedafbf77e3a66087709bbdf60bc643d SHA256 4e8a7fecd44807343b6867e1f2440aa0e09613d6d69a7385ac48f4e5e7737a73
-DIST povray-3.7.0.beta.32.tar.bz2 6229739 RMD160 a3e758d628352036fed5bb4ffb31bc773d7b69f1 SHA1 73d8b18bfdaf74b1a60d4faec33b1fcd201388da SHA256 005a8c7d6e4787b18e94c9838f4d181c284fc764723424d18960d0165a3a9278
+DIST povray-3.7.0.beta.35a.tar.bz2 6327923 RMD160 8dc45ebece731b081ddb7e5280862b40db9f63a3 SHA1 79d2c17d50efea00a509a3020f93668c727aa232 SHA256 4ec857bebf75895dcbc01ad455cd2192c1ccece786691ce9e4f8265c479cfb30
 EBUILD povray-3.6.1-r4.ebuild 2827 RMD160 ac7b2d79211e7c8e5a61619f0d55d5e44955518a SHA1 557564b63c14ee10167d4cad95bab873a70c8e0e SHA256 b1d5733a7c77974680da14b3c905c326e4ea444764d2f6c1d70f4139dc9c0ddd
-EBUILD povray-3.7.0_beta32.ebuild 4313 RMD160 e78056fa8cce2527875344ebc739c5ba67464d1c SHA1 17c0d70dcd2a661b158065137e97ef852487fad7 SHA256 b5404a02ce22a478a7388f412fd78036003d9d5bfb749460fe307bc298035ec2
-MISC ChangeLog 14830 RMD160 522ba1e3901f05be01c4c277d64c52d22a69cf9f SHA1 cc8bf2ae0ae8122e3768117d18d970f167e82088 SHA256 ba89ad5144b0a108d689fdab69c2265f69ab4095a75f43e294a744811178e080
+EBUILD povray-3.7.0_beta35.ebuild 4336 RMD160 4d318d3d94d82b37b61ac2d9665ea366dd053b76 SHA1 46ed355700ef7a156cd8d225b44393e7bd8b7b4c SHA256 b36074ddf41a04716cf80d5bd19230d855bc08a0bcd1ba5f55cef3bd0e564356
+MISC ChangeLog 15256 RMD160 ff6590c27276a69232b0f52f625f26c321c9dc81 SHA1 a68dadb19ad12fbc5c7aa366e67696ced821821f SHA256 6d617fc45c736e215d5ad6e510fe4e25c0bfc197e795af8fb66313ebc5c441bd
 MISC metadata.xml 223 RMD160 0c9c59654305e8789fe6c93fd07c561cfe003f54 SHA1 7904e6fb45104baf2cb67fb9886c633af4dc7056 SHA256 a24b49fe5448d4cb329acf1d8113ac30eb1d61d63a7319b66c077d3f1775d055
